påbörjade hem-sidan

--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,61 @@
 <title>Hem</title>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
-
+  <header>
+    <h1>Rasmus Isaksson´s Sida</h1>
+    <nav>
+      <ul>
+        <il>
+          <a href="Klienttekniker.html">Klienttekniker</a>
+        </il>
+        <il>
+          <a href="Projektmetodik.html">Projektmetodik</a>
+        </il>
+        <il>
+          <a href="Internet.html">Internet</a>
+        </il>
+        <il>
+          <a href="Analys.html">Analys</a>
+        </il>
+        <il>
+          <a href="Kontakt.html">Kontakt</a>
+        </il>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <ul>
+      <h2>Innehåll:</h2>
+      <il>
+        <a href="Klienttekniker.html">Klienttekniker</a>
+        <p>Info om Klienttekniker, så som HTML, CSS och JavaScript</p>
+        <img src="TODO">
+      </il>
+      <il>
+        <a href="Projektmetodik.html">Projektmetodik</a>
+        <p>Info om olika projetmetoder</p>
+        <img src="TODO">
+      </il>
+      <il>
+        <a href="Internet.html">Internet</a>
+        <p>Info om hur internet fungerar</p>
+        <img src="TODO">
+      </il>
+      <il>
+        <a href="Analys.html">Analys</a>
+        <p>Analys om projektet</p>
+        <img src="TODO">
+      </il>
+      <il>
+        <a href="Kontakt.html">Kontakt</a>
+        <p>Kontaktinformation och email</p>
+        <img src="TODO">
+      </il>
+    </ul>
+  </section>
 </body>
 </html>
