--- a/Klienttekniker.html
+++ b/Klienttekniker.html
@@ -5,6 +5,27 @@
   <meta charset="utf-8">
 </head>
 <body>
-
+  <header>
+    <h1>Rasmus Isaksson´s Sida</h1>
+    <nav>
+      <ul>
+        <il>
+          <a href="Klienttekniker.html">Klienttekniker</a>
+        </il>
+        <il>
+          <a href="Projektmetodik.html">Projektmetodik</a>
+        </il>
+        <il>
+          <a href="Internet.html">Internet</a>
+        </il>
+        <il>
+          <a href="Analys.html">Analys</a>
+        </il>
+        <il>
+          <a href="Kontakt.html">Kontakt</a>
+        </il>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
