--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <article>
     <ul>
       <h2>Innehåll:</h2>
       <il>
@@ -58,6 +58,6 @@
         <img src="TODO">
       </il>
     </ul>
-  </section>
+  </article>
 </body>
 </html>
