--- a/Index.html
+++ b/Index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
 <title>Hem</title>
-<head>
+<head id="header">
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
 <body>
   <header>
-    <h1>Rasmus Isaksson´s Sida</h1>
-    <nav>
-      <ul>
-        <il>
-          <a href="Klienttekniker.html">Klienttekniker</a>
-        </il>
-        <il>
-          <a href="Projektmetodik.html">Projektmetodik</a>
-        </il>
-        <il>
-          <a href="Internet.html">Internet</a>
-        </il>
-        <il>
-          <a href="Analys.html">Analys</a>
-        </il>
-        <il>
-          <a href="Kontakt.html">Kontakt</a>
-        </il>
-      </ul>
-    </nav>
+    <a href="index.html">
+      <h1>Rasmus Isaksson´s Sida</h1>
+    </a>
   </header>
+  <aside>
+      <nav>
+        <div>
+          <a href="Klienttekniker.html">Klienttekniker</a>
+        </div>
+        <div>
+          <a href="Projektmetodik.html">Projektmetodik</a>
+        </div>
+        <div>
+          <a href="Internet.html">Internet</a>
+        </div>
+        <div>
+          <a href="Analys.html">Analys</a>
+        </div>
+        <div>
+          <a href="Kontakt.html">Kontakt</a>
+        </div>
+      </nav>
+  </aside>
   <article>
     <ul>
       <h2>Innehåll:</h2>
