--- a/Internet.html
+++ b/Internet.html
@@ -3,29 +3,68 @@
 <title>Internet</title>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Rasmus Isaksson´s Sida</h1>
-    <nav>
-      <ul>
-        <il>
-          <a href="Klienttekniker.html">Klienttekniker</a>
-        </il>
-        <il>
-          <a href="Projektmetodik.html">Projektmetodik</a>
-        </il>
-        <il>
-          <a href="Internet.html">Internet</a>
-        </il>
-        <il>
-          <a href="Analys.html">Analys</a>
-        </il>
-        <il>
-          <a href="Kontakt.html">Kontakt</a>
-        </il>
-      </ul>
-    </nav>
+    <a href="index.html">
+      <h1>Rasmus Isaksson´s Sida</h1>
+    </a>
   </header>
+  <aside>
+      <nav>
+        <div>
+          <a href="Klienttekniker.html">Klienttekniker</a>
+        </div>
+        <div>
+          <a href="Projektmetodik.html">Projektmetodik</a>
+        </div>
+        <div id="current">
+          <a href="Internet.html">Internet</a>
+        </div>
+        <div>
+          <a href="Analys.html">Analys</a>
+        </div>
+        <div>
+          <a href="Kontakt.html">Kontakt</a>
+        </div>
+      </nav>
+  </aside>
+  <article>
+    <h2>
+      Klient-server-modellen
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. At, magnam blanditiis laudantium cum neque iusto repellendus, ab quae nobis officia voluptates quos et? Quia ipsa, natus nesciunt tenetur unde error?
+    </p>
+    <h2>
+      Internetkommunikation
+    </h2>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/7_LPdttKXPc"></iframe>
+    <h3>
+      Protokoll
+    </h3>
+    <p>
+      Lorem
+    </p>
+    <h3>
+      http/https
+    </h3>
+    <p>
+      Lorem
+    </p>
+    <h3>
+      ftp/ftps
+    </h3>
+    <p>
+      lorem
+    </p>
+    <h2>
+      Tillgänglighet
+    </h2>
+    <p>
+      WCAG lorem
+    </p>
+  </article>
 </body>
 </html>
