--- a/Message.html
+++ b/Message.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Projektmetodik</title>
+<title>Kontakt</title>
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
         <div>
           <a href="Klienttekniker.html">Klienttekniker</a>
         </div>
-        <div id="current">
+        <div>
           <a href="Projektmetodik.html">Projektmetodik</a>
         </div>
         <div>
@@ -32,26 +32,8 @@
   </aside>
   <article>
     <h2>
-      Vattenfallsmetodik
+      Tack för ditt meddlande!
     </h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse repellendus, dignissimos porro repudiandae cum consequatur accusamus culpa autem aliquid iusto eius ab, tempora illo quae officia dicta nemo laboriosam nostrum.
-    </p>
-    <h2>
-      Agil utveckling
-    </h2>
-    <h3>
-      Det agila manifestet
-    </h3>
-    <p>
-      Lorem
-    </p>
-    <h3>
-      Hur man arbetar i Scrum
-    </h3>
-    <p>
-      Lorem
-    </p>
   </article>
 </body>
 </html>
