--- a/Klienttekniker.html
+++ b/Klienttekniker.html
@@ -3,29 +3,52 @@
 <title>Klienttekniker</title>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
   <header>
-    <h1>Rasmus Isaksson´s Sida</h1>
-    <nav>
-      <ul>
-        <il>
-          <a href="Klienttekniker.html">Klienttekniker</a>
-        </il>
-        <il>
-          <a href="Projektmetodik.html">Projektmetodik</a>
-        </il>
-        <il>
-          <a href="Internet.html">Internet</a>
-        </il>
-        <il>
-          <a href="Analys.html">Analys</a>
-        </il>
-        <il>
-          <a href="Kontakt.html">Kontakt</a>
-        </il>
-      </ul>
-    </nav>
+    <a href="index.html">
+      <h1>Rasmus Isaksson´s Sida</h1>
+    </a>
   </header>
+  <aside>
+      <nav>
+        <div id="current">
+          <a href="Klienttekniker.html">Klienttekniker</a>
+        </div>
+        <div>
+          <a href="Projektmetodik.html">Projektmetodik</a>
+        </div>
+        <div>
+          <a href="Internet.html">Internet</a>
+        </div>
+        <div>
+          <a href="Analys.html">Analys</a>
+        </div>
+        <div>
+          <a href="Kontakt.html">Kontakt</a>
+        </div>
+      </nav>
+  </aside>
+  <article>
+    <h2>
+      HTML
+    </h2>
+    <p>
+      <abbr title="HyperText Markup Language">HTML</abbr> är ett markerings-språk
+    </p>
+    <h2>
+      CSS
+    </h2>
+    <p>
+      Lorem
+    </p>
+    <h2>
+      JavaScript
+    </h2>
+    <p>
+      Lorem
+    </p>
+  </article>
 </body>
 </html>
