--- a/Kontakt.html
+++ b/Kontakt.html
@@ -3,29 +3,46 @@
 <title>Kontakt</title>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
   <header>
-    <h1>Rasmus Isaksson´s Sida</h1>
-    <nav>
-      <ul>
-        <il>
-          <a href="Klienttekniker.html">Klienttekniker</a>
-        </il>
-        <il>
-          <a href="Projektmetodik.html">Projektmetodik</a>
-        </il>
-        <il>
-          <a href="Internet.html">Internet</a>
-        </il>
-        <il>
-          <a href="Analys.html">Analys</a>
-        </il>
-        <il>
-          <a href="Kontakt.html">Kontakt</a>
-        </il>
-      </ul>
-    </nav>
+    <a href="index.html">
+      <h1>Rasmus Isaksson´s Sida</h1>
+    </a>
   </header>
+  <aside>
+      <nav>
+        <div>
+          <a href="Klienttekniker.html">Klienttekniker</a>
+        </div>
+        <div>
+          <a href="Projektmetodik.html">Projektmetodik</a>
+        </div>
+        <div>
+          <a href="Internet.html">Internet</a>
+        </div>
+        <div>
+          <a href="Analys.html">Analys</a>
+        </div>
+        <div id="current">
+          <a href="Kontakt.html">Kontakt</a>
+        </div>
+      </nav>
+  </aside>
+  <article>
+    <form action="Message.html">
+      <input type="text" placeholder="Name">
+      <br>
+      <input type="email" placeholder="Email" required>
+      <br>
+      <input type="text" placeholder="Message">
+      <br>
+      <input type="submit" value="send" class="send" onclick="send()">
+    </form>
+  </article>
+  <script src="script.js"></script>
 </body>
 </html>
