texter till projektmetodik och klienttekniker

--- a/Klienttekniker.html
+++ b/Klienttekniker.html
@@ -35,19 +35,22 @@
       HTML
     </h2>
     <p>
-      <abbr title="HyperText Markup Language">HTML</abbr> är ett markerings-språk
+      <abbr title="HyperText Markup Language">HTML</abbr> är ett markerings-språk som används mest för att skapa websidor. Det används genom "markeringar" eller element för att strukturera up och delvis ändra form på ett dokument.
+      HTML låter också en att inkludera andra filer i dokumentet, t.ex bilder, program (JavaScript) och intruktioner hur dokumentet ska visas (CSS).
     </p>
     <h2>
       CSS
     </h2>
     <p>
-      Lorem
+      <!--TODO beskrivning om css-->
+      <abbr title="Cascading style sheet">CSS</abbr> är ett stilmalls-språk som ändrar hur ett HTML dokument visas, med typsnitt, färg, storlek, etc.
     </p>
     <h2>
       JavaScript
     </h2>
     <p>
-      Lorem
+      <!-- TODO beskrivning om javascript -->
+      JavaScript är ett scriptspråk som oftast används på klientsidan av en hemsida för att skapa interaktivitet.
     </p>
   </article>
 </body>
