--- a/Kontakt.html
+++ b/Kontakt.html
@@ -33,14 +33,41 @@
       </nav>
   </aside>
   <article>
+    <h2>Kontakt uppgifter:</h2>
+    <table>
+      <tr>
+        <td>
+          Namn:
+        </td>
+        <td>
+          Rasmus Isaksson
+        </td>
+      </tr>
+      <tr>
+        <td>
+          email:
+        </td>
+        <td>
+          paccelito@gmail.com
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Telefon:
+        </td>
+        <td>
+          076-113 1797
+        </td>
+      </tr>
+    </table>
     <form action="Message.html">
       <input type="text" placeholder="Name">
       <br>
       <input type="email" placeholder="Email" required>
       <br>
-      <input type="text" placeholder="Message">
+      <input type="text" placeholder="Message" id="messagewindow">
       <br>
-      <input type="submit" value="send" class="send" onclick="send()">
+      <input type="submit" value="send" onclick="send()">
     </form>
   </article>
   <script src="script.js"></script>
