--- a/Projektmetodik.html
+++ b/Projektmetodik.html
@@ -37,10 +37,17 @@
       Vattenfallsmetodik
     </h2>
     <p>
+      <div class="media">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Vattenfallsmetoden_JPG.jpg/525px-Vattenfallsmetoden_JPG.jpg"
+          alt="Exempelbild på vattenfallsmetoden"><br>
+        <i>
+        Exempelbild på hur vattenfallsmetoden fungerar.
+        </i>
+      </div>
       Vattenfallsmetoden är en systemutvecklingsmetod där arbetet läggs up som ett sekventiellt "vattenfall" med faser där varje
       fas måste bli klar innan nästa påbörjas.
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Vattenfallsmetoden_JPG.jpg/525px-Vattenfallsmetoden_JPG.jpg"
-        alt="Exempelbild på vattenfallsmetoden">
+      
+      
     </p>
     <h2>
       Agil utveckling
@@ -72,15 +79,6 @@
           Utvecklarteam: Utvecklarna som jobbar i projektet.
         </li>
       </ul>
-      <!--När man börjar projektet sätter man upp en Productbacklog, där man delar upp projektet i mindre delar. Produktägaren ordnar dessa delar efter hur viktiga de är för kunden. <br>
-      I början av Sprinten tar utvecklarteamet på sig vilka delar de tänker jobba på och lägger dem i Sprintbacklog.<br>
-      Varje dag under sprinten kommer utvecklarna ha DailyScrum möten med Scrummaster, där de kort och snabbt går igenom vad de har gjort, vad de kommer göra och vad som möjligtvis kommer hindra deras arbete.<br>
-      I slutet av Sprinten har man en Sprintreview där alla som har intresse av projektet (även folk som inte tar del av projektet) utvärderar och granskar sprintens resultat.<br>
-      Utvecklarna berättar vad de jobbat på och gör en demonstration av funktionaliteten av det de gjort.<br>
-      Resultatet av Sprintreviewn är en uppdaterad Productbacklog som följer vad alla tycker borde arbetas på in följande sprints.<br>
-      Därefter har produktägaren, Scrummastern och utvecklarteamet en Sprintretrospective, där de går igenom vad som gått bra/dåligt under sprinten och vad som kan förbättras inför nästa sprint.<br>
-      Tillslut har produktägarern ett Sprint planing möte med scrum-gruppen där han/hon går igenom önskade ändringar och prioriteringar och utvecklarteamet tar på sig nya arbetsuppgifter i en ny Sprintbacklog.<br>
-      -->
       En sprint byggs upp av 7 beståndsdelar.
       <ol>
         <li><b>Productbacklog:</b> En lista av de arbetsuppgifter som behöver göras</li>
