abselutely final touches

--- a/Index.html
+++ b/Index.html
@@ -31,9 +31,16 @@
         </div>
       </nav>
   </aside>
+  <section id="highlight">
+    <div>
+      <h1>
+        HTML och Agila metoder
+      </h1>
+    </div>
+  </section>
   <article>
     <ul id="tableofcontents">
-      <h2>Innehåll:</h2>
+      <h1>Innehåll:</h1>
       <div>
           <img src="https://cdn.pixabay.com/photo/2016/02/19/11/19/computer-1209641_960_720.jpg"> 
         <li>
