--- a/Projektmetodik.html
+++ b/Projektmetodik.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
-<title>Projektmetodik</title>
-
+<html lang = "sv">
 <head>
+  <title>Projektmetodik</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <header>
     <a href="index.html">
@@ -36,7 +34,6 @@
     <h2>
       Vattenfallsmetodik
     </h2>
-    <p>
       <div class="media">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Vattenfallsmetoden_JPG.jpg/525px-Vattenfallsmetoden_JPG.jpg"
           alt="Exempelbild på vattenfallsmetoden"><br>
@@ -46,9 +43,7 @@
       </div>
       Vattenfallsmetoden är en systemutvecklingsmetod där arbetet läggs up som ett sekventiellt "vattenfall" med faser där varje
       fas måste bli klar innan nästa påbörjas.
-      
-      
-    </p>
+
     <h2>
       Agil utveckling
     </h2>
@@ -63,7 +58,6 @@
     <h3>
       Hur man arbetar i Scrum
     </h3>
-    <p>
       I Scrum arbetar man i så kallade "Sprintar" som har flera beståndsdelar i form a obligatoriska möten och dokument och specifika
       roller för medlemmar av projektet.
       <br>Rollerna är:
@@ -109,8 +103,6 @@
           Teamet bryter sedan ned de nya kraven och gör tidsestimeringar över dem, och bygger upp en ny Sprintbacklog.
         </li>
       </ol>
-    </p>
   </article>
 </body>
-
 </html>
