--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Hem</title>
-<head id="header">
+<head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
