--- a/Message.html
+++ b/Message.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>Kontakt</title>
 <head>
+  <title>Thank you!</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 </head>
