--- a/Projektmetodik.html
+++ b/Projektmetodik.html
@@ -34,7 +34,7 @@
     <h2>
       Vattenfallsmetodik
     </h2>
-      <div class="media">
+      <div class="media" id="waterfall">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Vattenfallsmetoden_JPG.jpg/525px-Vattenfallsmetoden_JPG.jpg"
           alt="Exempelbild på vattenfallsmetoden"><br>
         <i>
