--- a/Kontakt.html
+++ b/Kontakt.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 <body>
   <header>
@@ -67,7 +66,7 @@
       <br>
       <input type="text" placeholder="Message" id="messagewindow">
       <br>
-      <input type="submit" value="send" onclick="send()">
+      <input type="submit" value="send">
     </form>
   </article>
   <script src="script.js"></script>
