--- a/Projektmetodik.html
+++ b/Projektmetodik.html
@@ -41,8 +41,14 @@
         Exempelbild på hur vattenfallsmetoden fungerar.
         </i>
       </div>
-      Vattenfallsmetoden är en systemutvecklingsmetod där arbetet läggs up som ett sekventiellt "vattenfall" med faser där varje
-      fas måste bli klar innan nästa påbörjas.
+      Vattenfallsmetoden är en systemutvecklingsmetod där arbetet läggs upp som ett sekventiellt "vattenfall" med faser där varje
+      fas måste bli klar innan nästa påbörjas. De olika stegen beskrivs i exempelbilden för vattenfallsmodellen.
+      Man börjar med att skriva en kravspecifikation. När den är godkänd kan man börja med systemets design. Sedan kan man börja med implementationen.
+      När alla systemets delar är utvecklade påbörjas integrationen. Man testar sedan systemets funktion. När systemet är verifierat kan man göra den slutliga installationen
+      och underhållsfasen kan påbörjas.<br>
+      Fördelarna med vattenfallsmetoden är att man kan besluta efter varje steg om man ska sluta eller fortsätta. Det som levereras är testat och modellen är relativt lätt att förstå.<br>
+      Nackdelarna är att det blir stora omtag vid förändringar, man kanske måste göra om alla föregående steg för just den ändringen.
+      
 
     <h2>
       Agil utveckling
@@ -54,7 +60,26 @@
       Agila metoder är sätt att utveckla programvara som följer principer som fokuserar på kundnöjdhet och kommunikation mellan
       kund och utvecklare. De bygger på att man arbetar i korta cykler där man kontinuerligt kommer med feedback över hur
       arbetet går. Det leder till att man snabbt kan göra ändringar om man stöter på problem.
-    </p>
+      Det agila manifestet försöker beskriva ett bättre sätt att utveckla programvara genom att följa 4 värdepunkter.
+      </p>
+      <ul>
+        <li>
+          <strong>Individer och interaktioner</strong> framför processer och verktyg
+        </li>
+        <li>
+          <strong>Fungerande programvara</strong> framför omfattande dokumentation
+        </li>
+        <li>
+          <strong>Kundsamarbete</strong> framför kontraktsförhandling
+        </li>
+        <li>
+          <strong>Anpassning till förändring</strong> framför att följa en plan
+        </li>
+      </ul>
+      <p>
+        Syftet med dessa punkter är att kunden tidigt blir delaktig i utvecklingsprocessen och man levererar fungerande programvara ofta efter kundens önskemål.
+        Det är också viktigt att utvecklingsteamet följer upp vad som går bra och vad som kan förbättras och ständigt jobbar på att bli mer effektiva.
+      </p>
     <h3>
       Hur man arbetar i Scrum
     </h3>
