--- a/Analys.html
+++ b/Analys.html
@@ -22,7 +22,7 @@
         <div>
           <a href="Internet.html">Internet</a>
         </div>
-        <div id="current">
+        <div id="cur">
           <a href="Analys.html">Analys</a>
         </div>
         <div>
