--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
   </section>
   <article>
   <h2>Innehåll:</h2>   
-    <ul id="tableofcontents">
+    <ul id="toc">
         <li>
           <img src="https://cdn.pixabay.com/photo/2016/02/19/11/19/computer-1209641_960_720.jpg" alt="picture of html code"> 
           <h3>
