--- a/Internet.html
+++ b/Internet.html
@@ -19,7 +19,7 @@
         <div>
           <a href="Projektmetodik.html">Projektmetodik</a>
         </div>
-        <div id="current">
+        <div id="cur">
           <a href="Internet.html">Internet</a>
         </div>
         <div>
