--- a/Kontakt.html
+++ b/Kontakt.html
@@ -26,7 +26,7 @@
         <div>
           <a href="Analys.html">Analys</a>
         </div>
-        <div id="current">
+        <div id="cur">
           <a href="Kontakt.html">Kontakt</a>
         </div>
       </nav>
