--- a/Projektmetodik.html
+++ b/Projektmetodik.html
@@ -16,7 +16,7 @@
       <div>
         <a href="Klienttekniker.html">Klienttekniker</a>
       </div>
-      <div id="current">
+      <div id="cur">
         <a href="Projektmetodik.html">Projektmetodik</a>
       </div>
       <div>
