--- a/Klienttekniker.html
+++ b/Klienttekniker.html
@@ -13,7 +13,7 @@
   </header>
   <aside>
       <nav>
-        <div id="current">
+        <div id="cur">
           <a href="Klienttekniker.html">Klienttekniker</a>
         </div>
         <div>
